[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/Voxel-Core/engine/BottomPanel/BottomPanel.gd" type="Script" id=1]
[ext_resource path="res://addons/Voxel-Core/assets/gui/lock.png" type="Texture" id=2]
[ext_resource path="res://addons/Voxel-Core/engine/BottomPanel/ToolsDropdown/ToolsDropdown.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/Voxel-Core/engine/BottomPanel/ToolModesDropdown/ToolModesDropdown.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/Voxel-Core/assets/gui/mirror_x.png" type="Texture" id=5]
[ext_resource path="res://addons/Voxel-Core/assets/gui/mirror_y.png" type="Texture" id=6]
[ext_resource path="res://addons/Voxel-Core/assets/gui/mirror_z.png" type="Texture" id=7]
[ext_resource path="res://addons/Voxel-Core/assets/gui/settings.png" type="Texture" id=8]
[ext_resource path="res://addons/Voxel-Core/engine/BottomPanel/FloorTypesDropdown/FloorTypesDropdown.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/Voxel-Core/assets/gui/VoxelCore.svg" type="Texture" id=10]

[node name="BottomPanel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 150 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1004.0
margin_bottom = 580.0

[node name="Tools" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 326.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Tools"]
margin_right = 326.0
margin_bottom = 24.0

[node name="ToolButton" type="ToolButton" parent="MarginContainer/HBoxContainer/Tools/HBoxContainer"]
margin_right = 46.0
margin_bottom = 24.0
focus_mode = 0
shortcut_in_tooltip = false
button_mask = 0
enabled_focus_mode = 0
text = "Tools"
align = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Tools/HBoxContainer"]
margin_left = 50.0
margin_right = 326.0
margin_bottom = 24.0
size_flags_horizontal = 3
alignment = 2

[node name="Lock" type="CheckBox" parent="MarginContainer/HBoxContainer/Tools/HBoxContainer/HBoxContainer"]
margin_left = 199.0
margin_right = 276.0
margin_bottom = 24.0
pressed = true
text = "Lock"
icon = ExtResource( 2 )

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/Tools"]
margin_top = 28.0
margin_right = 326.0
margin_bottom = 32.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/Tools"]
margin_top = 36.0
margin_right = 326.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Tools/ScrollContainer"]
margin_right = 326.0
margin_bottom = 544.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Tools/ScrollContainer/VBoxContainer"]
margin_right = 326.0
margin_bottom = 20.0

[node name="Tools" parent="MarginContainer/HBoxContainer/Tools/ScrollContainer/VBoxContainer/HBoxContainer3" instance=ExtResource( 3 )]
margin_right = 161.0
size_flags_horizontal = 3

[node name="ToolMode" parent="MarginContainer/HBoxContainer/Tools/ScrollContainer/VBoxContainer/HBoxContainer3" instance=ExtResource( 4 )]
margin_left = 165.0
margin_right = 326.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Tools/ScrollContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 326.0
margin_bottom = 44.0

[node name="PrimaryColor" type="ColorPickerButton" parent="MarginContainer/HBoxContainer/Tools/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_right = 63.0
margin_bottom = 20.0
rect_min_size = Vector2( 32, 0 )
size_flags_horizontal = 3
color = Color( 1, 1, 1, 1 )

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Tools/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_left = 67.0
margin_top = 3.0
margin_right = 153.0
margin_bottom = 17.0
text = "Primary Color"

[node name="SecondaryColor" type="ColorPickerButton" parent="MarginContainer/HBoxContainer/Tools/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_left = 157.0
margin_right = 220.0
margin_bottom = 20.0
rect_min_size = Vector2( 32, 0 )
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/Tools/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_left = 224.0
margin_top = 3.0
margin_right = 326.0
margin_bottom = 17.0
text = "Secondary Color"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Tools/ScrollContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 326.0
margin_bottom = 72.0

[node name="MirrorX" type="CheckBox" parent="MarginContainer/HBoxContainer/Tools/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_right = 106.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Mirror X"
icon = ExtResource( 5 )

[node name="MirrorY" type="CheckBox" parent="MarginContainer/HBoxContainer/Tools/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 110.0
margin_right = 216.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Mirror Y"
icon = ExtResource( 6 )

[node name="MirrorZ" type="CheckBox" parent="MarginContainer/HBoxContainer/Tools/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 220.0
margin_right = 326.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Mirror Z"
icon = ExtResource( 7 )

[node name="HSplitContainer" type="VSeparator" parent="MarginContainer/HBoxContainer"]
margin_left = 330.0
margin_right = 334.0
margin_bottom = 580.0

[node name="Properties" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 338.0
margin_right = 664.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ToolButton" type="ToolButton" parent="MarginContainer/HBoxContainer/Properties"]
margin_right = 326.0
margin_bottom = 22.0
focus_mode = 0
shortcut_in_tooltip = false
button_mask = 0
enabled_focus_mode = 0
text = "Properties"
align = 0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/Properties"]
margin_top = 26.0
margin_right = 326.0
margin_bottom = 30.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/Properties"]
margin_top = 34.0
margin_right = 326.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Properties/ScrollContainer"]
margin_right = 326.0
margin_bottom = 546.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSplitContainer2" type="VSeparator" parent="MarginContainer/HBoxContainer"]
margin_left = 668.0
margin_right = 672.0
margin_bottom = 580.0

[node name="Settings" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 676.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ToolButton" type="ToolButton" parent="MarginContainer/HBoxContainer/Settings"]
margin_right = 328.0
margin_bottom = 24.0
focus_mode = 0
shortcut_in_tooltip = false
button_mask = 0
enabled_focus_mode = 0
text = "Settings"
icon = ExtResource( 8 )
align = 0

[node name="VSplitContainer" type="HSeparator" parent="MarginContainer/HBoxContainer/Settings"]
margin_top = 28.0
margin_right = 328.0
margin_bottom = 32.0

[node name="TabContainer" type="TabContainer" parent="MarginContainer/HBoxContainer/Settings"]
margin_top = 36.0
margin_right = 328.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="General" type="ScrollContainer" parent="MarginContainer/HBoxContainer/Settings/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Settings/TabContainer/General"]
margin_right = 320.0
margin_bottom = 508.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AutoSave" type="CheckBox" parent="MarginContainer/HBoxContainer/Settings/TabContainer/General/VBoxContainer"]
margin_right = 320.0
margin_bottom = 24.0
pressed = true
text = "       AutoSave"

[node name="Cursor" type="ScrollContainer" parent="MarginContainer/HBoxContainer/Settings/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Settings/TabContainer/Cursor"]
margin_right = 320.0
margin_bottom = 508.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CursorVisible" type="CheckBox" parent="MarginContainer/HBoxContainer/Settings/TabContainer/Cursor/VBoxContainer"]
margin_right = 320.0
margin_bottom = 24.0
pressed = true
text = "       Cursor Visible"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Settings/TabContainer/Cursor/VBoxContainer"]
margin_top = 28.0
margin_right = 320.0
margin_bottom = 48.0

[node name="CursorColor" type="ColorPickerButton" parent="MarginContainer/HBoxContainer/Settings/TabContainer/Cursor/VBoxContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 20.0
rect_min_size = Vector2( 32, 0 )
size_flags_horizontal = 0

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/Settings/TabContainer/Cursor/VBoxContainer/HBoxContainer"]
margin_left = 36.0
margin_top = 3.0
margin_right = 126.0
margin_bottom = 17.0
text = "   Cursor Color"

[node name="Floor" type="ScrollContainer" parent="MarginContainer/HBoxContainer/Settings/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Settings/TabContainer/Floor"]
margin_right = 320.0
margin_bottom = 508.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FloorVisible" type="CheckBox" parent="MarginContainer/HBoxContainer/Settings/TabContainer/Floor/VBoxContainer"]
margin_right = 320.0
margin_bottom = 24.0
pressed = true
text = "       Floor Visible"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Settings/TabContainer/Floor/VBoxContainer"]
margin_top = 28.0
margin_right = 320.0
margin_bottom = 48.0

[node name="FloorColor" type="ColorPickerButton" parent="MarginContainer/HBoxContainer/Settings/TabContainer/Floor/VBoxContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 20.0
rect_min_size = Vector2( 32, 0 )
size_flags_horizontal = 0

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/Settings/TabContainer/Floor/VBoxContainer/HBoxContainer"]
margin_left = 36.0
margin_top = 3.0
margin_right = 117.0
margin_bottom = 17.0
text = "   Floor Color"

[node name="FloorTypesDropdown" parent="MarginContainer/HBoxContainer/Settings/TabContainer/Floor/VBoxContainer" instance=ExtResource( 9 )]
margin_top = 52.0
margin_right = 320.0
margin_bottom = 72.0
size_flags_horizontal = 3

[node name="About" type="ScrollContainer" parent="MarginContainer/HBoxContainer/Settings/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Settings/TabContainer/About"]
margin_right = 320.0
margin_bottom = 508.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Settings/TabContainer/About/VBoxContainer"]
margin_right = 320.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Settings/TabContainer/About/VBoxContainer"]
margin_top = 79.0
margin_right = 320.0
margin_bottom = 93.0
text = "Voxel-Core"
align = 1
